--- a/ArjunaCore/pom.xml
+++ b/ArjunaCore/pom.xml
@@ -22,8 +22,8 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.jboss.narayana.arjunacore.quickstart</groupId>
-  <artifactId>quickstarts</artifactId>
+  <groupId>org.jboss.narayana.quickstart.arjunacore</groupId>
+  <artifactId>narayana-quickstarts-core</artifactId>
   <version>5.9.1.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JBoss Core Examples</name>
