--- a/ArjunaCore/txoj/pom.xml
+++ b/ArjunaCore/txoj/pom.xml
@@ -13,8 +13,8 @@
   Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.jboss.narayana.arjunacore.quickstart</groupId>
-    <artifactId>quickstarts</artifactId>
+    <groupId>org.jboss.narayana.quickstart.arjunacore</groupId>
+    <artifactId>narayana-quickstarts-core</artifactId>
     <version>5.9.1.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
@@ -25,6 +25,8 @@
   <description>TXOJ example</description>
   <properties>
     <version.narayana>5.9.1.Final-SNAPSHOT</version.narayana>
+    <version.junit>4.12</version.junit>
+    <version.wildfly.logging>5.0.0.Beta5</version.wildfly.logging>
   </properties>
   <build>
     <plugins>
@@ -41,7 +43,6 @@
         </executions>
         <configuration>
           <executable>java</executable>
-          <workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
           <arguments>
             <argument>-classpath</argument>
             <classpath/>
@@ -60,8 +61,88 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.2</version>
+      <version>${version.junit}</version>
       <scope>test</scope>
     </dependency>
+    <!-- For logging -->
+    <dependency>
+       <groupId>org.wildfly.core</groupId>
+       <artifactId>wildfly-logging</artifactId>
+       <version>${version.wildfly.logging}</version>
+    </dependency>
   </dependencies>
+  <profiles>
+    <profile>
+      <id>unix</id>
+      <activation>
+        <os>
+          <family>unix</family>
+        </os>
+        <property>
+          <name>!skipTests</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>exec-maven-plugin</artifactId>
+            <groupId>org.codehaus.mojo</groupId>
+            <executions>
+              <execution>
+                <id>Execute run script as test</id>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>bash</executable>
+                  <commandlineArgs>${basedir}/run.sh</commandlineArgs>
+                  <environmentVariables>
+                    <QUICKSTART_NARAYANA_VERSION>${version.narayana}</QUICKSTART_NARAYANA_VERSION>
+                  </environmentVariables>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>windows</id>
+      <activation>
+        <os>
+          <family>windows</family>
+        </os>
+        <property>
+          <name>!skipTests</name> 
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+             <version>1.6</version>
+             <executions>
+               <execution>
+                 <phase>integration-test</phase>
+                 <configuration>
+                   <target>
+                     <exec dir="${project.basedir}" executable="cmd" failonerror="true">
+                       <arg value="/c"/>
+                       <arg value="run.bat"/>
+                       <env key="QUICKSTART_NARAYANA_VERSION" value="${version.narayana}" />
+                     </exec>
+                   </target>
+                 </configuration>
+                 <goals>
+                   <goal>run</goal>
+                 </goals>
+               </execution>
+            </executions>      
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
