--- a/ArjunaJTS/standalone/pom.xml
+++ b/ArjunaJTS/standalone/pom.xml
@@ -17,72 +17,45 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.narayana.quickstart.jts</groupId>
-    <artifactId>standalone</artifactId>
-    <version>5.9.1.Final-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>Standalone JTS Transaction Example</name>
-    <description>Standalone JTS Transaction Example</description>
+  <groupId>org.jboss.narayana.quickstart.jts</groupId>
+  <artifactId>jts-standalone</artifactId>
+  <version>5.9.1.Final-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  <name>Standalone JTS Transaction Example</name>
+  <description>Standalone JTS Transaction Example</description>
 
-    <url>http://narayana.io</url>
-    <licenses>
-      <license>
-        <name>LGPL 2.1</name>
-        <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
-      </license>
-    </licenses>
+  <url>http://narayana.io</url>
+  <licenses>
+    <license>
+      <name>LGPL 2.1</name>
+      <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
+    </license>
+  </licenses>
 
-    <properties>
-      <version.narayana>5.9.1.Final-SNAPSHOT</version.narayana>
-    </properties>
+  <properties>
+    <version.narayana>5.9.1.Final-SNAPSHOT</version.narayana>
+  </properties>
 
-    <repositories>
-      <repository>
-        <id>jbossThirdParty</id>
-        <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
-      </repository>
-      <repository>
-        <id>jboss-public-repository-group</id>
-        <name>JBoss Public Maven Repository Group</name>
-        <url>https://repository.jboss.org/nexus/content/groups/public/</url>
-        <releases>
-          <enabled>true</enabled>
-        </releases>
-        <snapshots>
-          <enabled>true</enabled>
-        </snapshots>
-      </repository>
-    </repositories>
-  
-<!--
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <cleanupDaemonThreads>false</cleanupDaemonThreads>
-          <executable>java</executable>
-          <workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
-          <arguments>
-            <argument>-classpath</argument>
-            <classpath/>
-            <argument>org.jboss.narayana.jta.quickstarts.TransactionExample</argument>
-          </arguments>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
--->
+  <repositories>
+    <repository>
+      <id>jbossThirdParty</id>
+      <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
+    </repository>
+    <repository>
+      <id>jboss-public-repository-group</id>
+      <name>JBoss Public Maven Repository Group</name>
+      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <dependencies>
     <!-- Narayana dependencies -->
     <dependency>
@@ -125,5 +98,80 @@
       <version>${version.narayana}</version>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>unix</id>
+      <activation>
+        <os>
+          <family>unix</family>
+        </os>
+        <property>
+          <name>!skipTests</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>Run tests</id>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>bash</executable>
+                  <commandlineArgs>${basedir}/run.sh</commandlineArgs>
+                  <environmentVariables>
+                    <QUICKSTART_NARAYANA_VERSION>${version.narayana}</QUICKSTART_NARAYANA_VERSION>
+                  </environmentVariables>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>windows</id>
+      <activation>
+        <os>
+          <family>windows</family>
+        </os>
+        <property>
+          <name>!skipTests</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+             <version>1.6</version>
+             <executions>
+               <execution>
+                 <phase>integration-test</phase>
+                 <configuration>
+                   <target>
+                     <exec dir="${project.basedir}" executable="cmd.exe" failonerror="true">
+                       <arg value="/c"/>
+                       <arg value="run.bat"/>
+                       <env key="QUICKSTART_NARAYANA_VERSION" value="${version.narayana}" />
+                     </exec>
+                   </target>
+                 </configuration>
+                 <goals>
+                   <goal>run</goal>
+                 </goals>
+               </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
