--- a/ArjunaJTA/javax_transaction/pom.xml
+++ b/ArjunaJTA/javax_transaction/pom.xml
@@ -23,7 +23,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
-    <artifactId>quickstarts</artifactId>
+    <artifactId>narayana-quickstarts-jta</artifactId>
     <version>5.9.1.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
@@ -49,7 +49,6 @@
         </executions>
         <configuration>
           <executable>java</executable>
-          <workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
           <arguments>
             <argument>-classpath</argument>
             <classpath/>
@@ -59,4 +58,79 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>unix</id>
+      <activation>
+        <os>
+          <family>unix</family>
+        </os>
+        <property>
+          <name>!skipTests</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>exec-maven-plugin</artifactId>
+            <groupId>org.codehaus.mojo</groupId>
+            <executions>
+              <execution>
+                <id>Execute run script as test</id>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>${basedir}/run.sh</executable>
+                  <environmentVariables>
+                    <QUICKSTART_NARAYANA_VERSION>${version.narayana}</QUICKSTART_NARAYANA_VERSION>
+                  </environmentVariables>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>windows</id>
+      <activation>
+        <os>
+          <family>windows</family>
+        </os>
+        <property>
+          <name>!skipTests</name> 
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+             <version>1.6</version>
+             <executions>
+               <execution>
+                 <phase>integration-test</phase>
+                 <configuration>
+                   <target>
+                     <exec dir="${project.basedir}" executable="cmd" failonerror="true">
+                       <arg value="/c"/>
+                       <arg value="run.bat"/>
+                       <env key="QUICKSTART_NARAYANA_VERSION" value="${version.narayana}" />
+                     </exec>
+                   </target>
+                 </configuration>
+                 <goals>
+                   <goal>run</goal>
+                 </goals>
+               </execution>
+            </executions>      
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
