--- a/ArjunaJTS/interop/glassfish/pom.xml
+++ b/ArjunaJTS/interop/glassfish/pom.xml
@@ -37,6 +37,9 @@
         <os>
           <family>unix</family>
         </os>
+        <property>
+          <name>!skipTests</name>
+        </property>
       </activation>
       <build>
         <plugins>
