--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		if not, write to the Free Software Foundation, Inc., 51 Franklin Street, 
 		Fifth Floor, Boston, MA 02110-1301, USA. (C) 2009, @author JBoss Inc. (jonathan.halliday@redhat.com) -->
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.jboss.narayana.quickstart.jta</groupId>
+  <groupId>org.jboss.narayana.quickstart</groupId>
   <artifactId>narayana-quickstarts-all</artifactId>
   <version>5.9.1.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -134,6 +134,7 @@
     <module>spring</module>
     <module>ArjunaCore</module>
     <module>ArjunaJTA</module>
+    <module>atsintegration</module>
     <module>compensating-transactions</module>
     <module>rts</module>
     <module>XTS</module>
