--- a/rts/lra/hotel-service/pom.xml
+++ b/rts/lra/hotel-service/pom.xml
@@ -25,6 +25,7 @@
 
         <version.wildfly-swarm>2017.8.1</version.wildfly-swarm>
         <version.resteasy-client>3.1.3.Final</version.resteasy-client>
+        <version.narayana>5.9.1.Final-SNAPSHOT</version.narayana>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -104,7 +105,7 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>lra-filters</artifactId>
-            <version>${project.version}</version>
+            <version>${version.narayana}</version>
         </dependency>
 
         <!-- JAXRS 2 Client API implementation -->
