--- a/spring/camel-with-narayana-spring-boot/pom.xml
+++ b/spring/camel-with-narayana-spring-boot/pom.xml
@@ -137,6 +137,9 @@
                 <os>
                     <family>unix</family>
                 </os>
+                <property>
+                    <name>!skipTests</name>
+                </property>
             </activation>
             <build>
                 <plugins>
