--- a/transactionaldriver/transactionaldriver-and-tomcat/pom.xml
+++ b/transactionaldriver/transactionaldriver-and-tomcat/pom.xml
@@ -56,6 +56,9 @@
                 <os>
                     <family>unix</family>
                 </os>
+                <property>
+                    <name>!skipTests</name>
+                </property>
             </activation>
             <build>
                 <plugins>
