--- a/transactionaldriver/transactionaldriver-jpa-and-tomcat/pom.xml
+++ b/transactionaldriver/transactionaldriver-jpa-and-tomcat/pom.xml
@@ -67,6 +67,9 @@
                 <os>
                     <family>unix</family>
                 </os>
+                <property>
+                    <name>!skipTests</name>
+                </property>
             </activation>
             <build>
                 <plugins>
