--- a/ArjunaJTA/maven/pom.xml
+++ b/ArjunaJTA/maven/pom.xml
@@ -59,7 +59,6 @@
                 </executions>
                 <configuration>
                     <executable>java</executable>
-                    <workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
                     <arguments>
                         <argument>-classpath</argument>
                         <classpath/>
@@ -109,4 +108,80 @@ read this as the JBoss stack of the Java EE 6 Web Profile APIs) -->
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>unix</id>
+            <activation>
+                <os>
+                  <family>unix</family>
+                </os>
+                <property>
+                  <name>!skipTests</name>
+                </property>
+            </activation>
+            <build>
+              <plugins>
+                  <plugin>
+                      <artifactId>exec-maven-plugin</artifactId>
+                      <groupId>org.codehaus.mojo</groupId>
+                      <executions>
+                          <execution>
+                              <id>Execute run script as test</id>
+                              <phase>integration-test</phase>
+                              <goals>
+                                  <goal>exec</goal>
+                              </goals>
+                              <configuration>
+                                  <executable>bash</executable>
+                                  <commandlineArgs>${basedir}/run.sh</commandlineArgs>
+                                  <environmentVariables>
+                                      <QUICKSTART_NARAYANA_VERSION>${version.narayana}</QUICKSTART_NARAYANA_VERSION>
+                                  </environmentVariables>
+                              </configuration>
+                          </execution>
+                      </executions>
+                  </plugin>
+              </plugins>
+            </build>
+        </profile>
+        <profile>
+          <id>windows</id>
+          <activation>
+              <os>
+                  <family>windows</family>
+              </os>
+              <property>
+                  <name>!skipTests</name> 
+              </property>
+          </activation>
+          <build>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-antrun-plugin</artifactId>
+                       <version>1.6</version>
+                       <executions>
+                           <execution>
+                               <phase>integration-test</phase>
+                               <configuration>
+                                     <target>
+                                         <exec dir="${project.basedir}" executable="cmd" failonerror="true">
+                                             <arg value="/c"/>
+                                             <arg value="run.bat"/>
+                                             <env key="QUICKSTART_NARAYANA_VERSION" value="${version.narayana}" />
+                                         </exec>
+                                     </target>
+                                 </configuration>
+                                 <goals>
+                                     <goal>run</goal>
+                                 </goals>
+                           </execution>
+                      </executions>      
+                  </plugin>
+              </plugins>
+          </build>
+        </profile>
+    </profiles>
+
 </project>
