--- a/rts/at/undertow/pom.xml
+++ b/rts/at/undertow/pom.xml
@@ -28,7 +28,7 @@
     <properties>
         <version.narayana>5.9.1.Final-SNAPSHOT</version.narayana>
         <version.jboss.logging>3.1.4.GA</version.jboss.logging>
-        <undertow.io.version>1.3.0.Beta6</undertow.io.version>
+        <undertow.io.version>1.3.33.Final</undertow.io.version>
         <version.resteasy>3.0.23.Final</version.resteasy>
     </properties>
 
