--- a/XTS/raw-xts-api-demo/pom.xml
+++ b/XTS/raw-xts-api-demo/pom.xml
@@ -20,7 +20,7 @@
     <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
     <artifactId>xts-demo-all</artifactId>
     <packaging>pom</packaging>
-    <version>5.5.33.Final</version>
+    <version>5.5.34.Final-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <url>http://narayana.io</url>
