--- a/rts/lra-examples/api-participant/pom.xml
+++ b/rts/lra-examples/api-participant/pom.xml
@@ -18,7 +18,7 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.wildfly-swarm>2017.8.1</version.wildfly-swarm>
-        <version.microprofile.lra>1.0-SNAPSHOT</version.microprofile.lra>
+        <version.microprofile.lra>1.0-20181217.132756-202</version.microprofile.lra>
     </properties>
 
     <repositories>
@@ -29,6 +29,14 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>repo.eclipse.org-snapshots</id>
+            <name>Eclipse MicroProfile Repository - Snapshots</name>
+            <url>https://repo.eclipse.org/content/repositories/microprofile-snapshots</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -84,12 +92,17 @@
             <artifactId>lra-proxy-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!-- MP LRA proides an API for clients to begin and end LRAs
-        -->
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>lra-client</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <!-- MP LRA proides an API for clients to begin and end LRAs
+        -->
+        <dependency>
+            <groupId>org.eclipse.microprofile.lra</groupId>
+            <artifactId>microprofile-lra-api</artifactId>
+            <version>${version.microprofile.lra}</version>
         </dependency>
 
         <!-- JAX-RS -->
