JBTM-3103 Disable LRA api quickstarts

--- a/rts/lra-examples/api-participant-with-coordinator/pom.xml
+++ b/rts/lra-examples/api-participant-with-coordinator/pom.xml
@@ -107,6 +107,7 @@
                                     <goal>exec</goal>
                                 </goals>
                                 <configuration>
+                                    <skip>true</skip>
                                     <executable>bash</executable>
                                     <commandlineArgs>${basedir}/../run.sh</commandlineArgs>
                                 </configuration>
