--- a/rts/lra-examples/api-participant/pom.xml
+++ b/rts/lra-examples/api-participant/pom.xml
@@ -143,6 +143,7 @@
                                     <goal>exec</goal>
                                 </goals>
                                 <configuration>
+                                    <skip>true</skip>
                                     <executable>bash</executable>
                                     <commandlineArgs>${basedir}/../run.sh</commandlineArgs>
                                 </configuration>
