--- a/at/tx/pom.xml
+++ b/at/tx/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>restat</artifactId>
-    <version>5.9.5.Final-SNAPSHOT</version>
+    <version>5.9.5.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
