--- a/jta-and-hibernate-standalone/pom.xml
+++ b/jta-and-hibernate-standalone/pom.xml
@@ -25,7 +25,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.narayana.quickstart</groupId>
+    <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>jta-and-hibernate-standalone</artifactId>
     <version>5.9.6.Final-SNAPSHOT</version>
 
