--- a/rts/lra-examples/cdi-participant-with-coordinator/pom.xml
+++ b/rts/lra-examples/cdi-participant-with-coordinator/pom.xml
@@ -7,18 +7,19 @@
     <version>5.9.7.Final-SNAPSHOT</version>
     <artifactId>examples-microprofile-lra-cdi-participant-with-coordinator</artifactId>
 
-    <name>WildFly Thorntail Examples: Microprofile LRA CDI Participant with Coordinator</name>
-    <description>WildFly Thorntail Examples: Microprofile LRA CDI participant using annotations with coordinator</description>
+    <name>MicroProfile Examples: LRA CDI Participant with Coordinator</name>
+    <description>MicroProfile Examples: LRA CDI participant using annotations with coordinator</description>
 
     <packaging>war</packaging>
 
     <properties>
         <maven.test.skip>true</maven.test.skip>
-        <swarm.debug.port>5005</swarm.debug.port>
+        <thorntail.debug.port>5005</thorntail.debug.port>
+        <thorntail.http.port>8080</thorntail.http.port>
+
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.wildfly-swarm>2017.8.1</version.wildfly-swarm>
-        <version.microprofile.lra>1.0-20190122.071206-242</version.microprofile.lra>
+        <version.microprofile.lra>1.0-RC1</version.microprofile.lra>
     </properties>
 
     <repositories>
@@ -33,23 +34,23 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>repo.eclipse.org-snapshots</id>
+            <name>Eclipse MicroProfile Repository - Snapshots</name>
+            <url>https://repo.eclipse.org/content/repositories/microprofile-snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
+
 
     <build>
         <finalName>lra-participant-example</finalName>
         <plugins>
             <plugin>
-                <groupId>org.wildfly.swarm</groupId>
-                <artifactId>wildfly-swarm-plugin</artifactId>
-                <version>${version.wildfly-swarm}</version>
-                <configuration>
-                    <debugPort>${swarm.debug.port}</debugPort>
-                    <properties>
-                        <swarm.http.port>8082</swarm.http.port>
-                        <swarm.debug.port>${swarm.debug.port}</swarm.debug.port>
-                        <swarm.transactions.node-identifier>2</swarm.transactions.node-identifier>
-                    </properties>
-                </configuration>
+                <groupId>io.thorntail</groupId>
+                <artifactId>thorntail-maven-plugin</artifactId>
                 <executions>
                     <execution>
                         <goals>
@@ -57,6 +58,17 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <debugPort>${thorntail.debug.port}</debugPort>
+                    <environment>
+                        <thorntail.http.port>${thorntail.http.port}</thorntail.http.port>
+                    </environment>
+                    <properties>
+                        <lra.http.port>${thorntail.http.port}</lra.http.port>
+                        <thorntail.debug.port>${thorntail.debug.port}</thorntail.debug.port>
+                        <thorntail.transactions.node-identifier>2</thorntail.transactions.node-identifier>
+                    </properties>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -75,6 +87,11 @@
             <artifactId>examples-microprofile-lra-cdi-participant</artifactId>
             <version>${project.version}</version>
             <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile.lra</groupId>
+            <artifactId>microprofile-lra-api</artifactId>
+            <version>${version.microprofile.lra}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
