--- a/rts/lra/lra-coordinator/Dockerfile
+++ b/rts/lra/lra-coordinator/Dockerfile
@@ -1,11 +1,11 @@
 FROM fabric8/java-jboss-openjdk8-jdk:1.2.3
 
-ENV JAVA_APP_JAR lra-coordinator-thorntail.jar
+ENV JAVA_APP_JAR lra-coordinator-runner.jar
 ENV AB_ENABLED off
 # to get more info about LRA processing in console you can add switch
-# -thorntail.logging=TRACE
-ENV JAVA_OPTIONS -Xmx512m -thorntail.transactions.object-store-path=../../data
+# -quarkus.logging=TRACE
+ENV JAVA_OPTIONS -Xmx512m -DObjectStoreEnvironmentBean.communicationStore.objectStoreDir=../../data -DObjectStoreEnvironmentBean.objectStoreDir=../../data -DObjectStoreEnvironmentBean.stateStore.objectStoreDir=../../data
 
 EXPOSE 8080
 
-ADD target/lra-coordinator-thorntail.jar /deployments/
+ADD target/lra-coordinator-runner.jar /deployments/
