[JBTM-3274] Using IPv4 for thorntail LRA quickstarts when IPv6 is not defined

--- a/rts/lra/lra-test/pom.xml
+++ b/rts/lra/lra-test/pom.xml
@@ -28,7 +28,7 @@
 
     <artifactId>lra-test</artifactId>
     <packaging>jar</packaging>
-    <name>Run the example locally</name>
+    <name>LRA Quickstart lra-test locally</name>
 
     <profiles>
         <profile>
