--- a/rts/lra/pom.xml
+++ b/rts/lra/pom.xml
@@ -21,7 +21,7 @@
     <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
     <artifactId>lra-quickstarts</artifactId>
     <version>5.10.5.Final-SNAPSHOT</version>
-    <name>RESTTX Quickstarts</name>
+    <name>LRA Quickstarts</name>
     <description>Provides examples of how to use transactions with web applications</description>
     <packaging>pom</packaging>
 
